--- a/Instagrid/Instagrid/View/Base.lproj/LaunchScreen.storyboard
+++ b/Instagrid/Instagrid/View/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,21 +13,17 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="Instagrid" translatesAutoresizingMaskIntoConstraints="NO" id="FQb-TT-yg6">
-                                <rect key="frame" x="125" y="314" width="124" height="39"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="39" id="1HW-q1-qtk"/>
-                                    <constraint firstAttribute="width" constant="124" id="dbw-Ld-bII"/>
-                                </constraints>
+                                <rect key="frame" x="145" y="348.66666666666669" width="124" height="39"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.71764705880000002" green="0.84313725490000002" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="FQb-TT-yg6" secondAttribute="bottom" constant="-333" id="23U-jL-o9V"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="leading" secondItem="FQb-TT-yg6" secondAttribute="trailing" constant="-249" id="42t-oA-YkL"/>
+                            <constraint firstItem="FQb-TT-yg6" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="OnS-Wl-Sdj"/>
+                            <constraint firstItem="FQb-TT-yg6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ULh-Oo-1PJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
